@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-08T08:09:51Z",
-  "count" : 111,
-  "count_minmax" : [ 111, 111 ],
-  "count_decinc" : [ -0, +111 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-09-08T16:09:44Z",
+  "count" : 204,
+  "count_minmax" : [ 111, 204 ],
+  "count_decinc" : [ -0, +204 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
