@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-08T08:09:51Z",
+  "timestamp" : "2023-09-08T16:09:44Z",
   "count_outdated" : 156011,
   "uniques_outdated" : 1665,
-  "count" : 160310,
-  "uniques" : 1698,
+  "count" : 160403,
+  "uniques" : 1699,
   "clones" : [
     {
       "timestamp": "2023-08-25T00:00:00Z",
-      "count": 132,
-      "count_minmax": [ 111, 298 ],
-      "count_decinc": [ 166, 298 ],
+      "count": 40,
+      "count_minmax": [ 40, 298 ],
+      "count_decinc": [ 258, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2023-09-08T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 204,
+      "count_minmax": [ 111, 204 ],
+      "count_decinc": [ 0, 204 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
