@@ -1,10 +1,10 @@
 {
-  "count": 4133,
+  "count": 4134,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-08-25T00:00:00Z",
-      "count": 132,
+      "count": 40,
       "uniques": 1
     },
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2023-09-08T00:00:00Z",
-      "count": 111,
-      "uniques": 1
+      "count": 204,
+      "uniques": 2
     }
   ]
 }
